--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "pixi.js": "^4.5.4"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
@@ -22,9 +28,8 @@
     "pixi-tiledmap": "^1.7.3",
     "tiled-to-pixi": "^1.0.1",
     "transform-loader": "^0.2.4",
-    "ts-loader": "^2.3.3",
     "typescript": "*",
     "url-loader": "^0.5.9",
-    "webpack": "^3.4.1"
+    "webpack": "^3.5.5"
   }
 }
